--- a/assets/fonts/fonts.scss
+++ b/assets/fonts/fonts.scss
@@ -1,43 +1,43 @@
 @font-face {
   font-family: Poppins-Bold;
-  src: url(Poppins-Bold.ttf);
+  src: url('/assets/fonts/Poppins-Bold.ttf') format('opentype');
   font-weight: 900;
 }
 
 @font-face {
   font-family: Poppins-BoldItalic;
-  src: url(Poppins-BoldItalic.ttf);
+  src: url('/assets/fonts/Poppins-BoldItalic.ttf') format('opentype');
   font-weight: 900;
   font-style: italic;
 }
 
 @font-face {
   font-family: Poppins-Medium;
-  src: url(Poppins-Italic.ttf);
+  src: url('/assets/fonts/Poppins-Italic.ttf')  format('opentype');
   font-weight: 700;
 }
 
 @font-face {
   font-family: Poppins-Regular;
-  src: url(Poppins-Regular.ttf);
+  src: url('/assets/fonts/Poppins-Regular.ttf')  format('opentype');
   font-weight: 400;
 }
 
 @font-face {
   font-family: Poppins-Italic;
-  src: url(Poppins-Italic.ttf);
+  src: url('/assets/fonts/Poppins-Italic.ttf') format('opentype');
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
   font-family: Poppins-Light;
-  src: url(Poppins-Light.ttf);
+  src: url('/assets/fonts/Poppins-Light.ttf') format('opentype');
   font-weight: 300;
 }
 
 @font-face {
   font-family: Poppins-Thin;
-  src: url(Poppins-Thin.ttf);
+  src: url('/assets/fonts/Poppins-Thin.ttf') format('opentype');
   font-weight: 100;
 }
